--- a/templates/dingxiang_show.html
+++ b/templates/dingxiang_show.html
@@ -30,7 +30,7 @@
                 <h1>死亡<span>{{ nation.deadCount }}</span></h1>
             </div>
         </div>
-        <h2>本地数据<small class="text-muted">{{ nowPlace }}</small></h2>
+        <h2>本地数据<small class="text-muted">{{ nowPlace|safe }}</small></h2>
         <div class="row">
             <div class="col-sm-3 col-md-3 col-lg-3 col-xs-3">
                 <h1>确诊<span class="text-danger">{{ local.confirmedCount }}</span></h1>
